--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "homepage": "https://github.com/rakoitde/ci4bs4form",
     "type": "package",
-    "version": "0.1.0-alpha",
+    "version": "1.0.0.0",
     "license": "MIT",
     "authors": [
         {
