--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
     "require-dev": {
         "phpunit/phpunit": "^9.2",
         "phpstan/phpstan": "^0.12.80",
-        "squizlabs/php_codesniffer": "*"
+        "squizlabs/php_codesniffer": "*",
+        "codeigniter/coding-standard": "^1.2"
     },
     "scripts": {
         "test": [
